data/derived/fa15/progs/unify/prog0696.ml.out
Characters 89-109:
  | Sine e		  -> sin(pi *. eval e, x, y)
                    ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type float
